fixed: layout bug in toc

--- a/app/assets/stylesheets/training_modules/_training.styl
+++ b/app/assets/stylesheets/training_modules/_training.styl
@@ -35,7 +35,7 @@
     font-size: 14px
     &:before
       display inline-block
-      width 1em
+      width 1.4em
       padding-right 5px
       font-weight bold
       text-align right
